<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.AssetReturnActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/tm_Layout"
        android:layout_marginTop="@dimen/mg_Title"
        android:layout_marginBottom="@dimen/mg_Title" />

    <TextView
        android:id="@+id/lbl_Code_Return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mg_Space"
        android:text="@string/txt_code_asset"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/ubuntu_mono" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_CodeAsset_Return"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mg_Space"
            android:ems="10"
            android:hint="@string/txt_code_asset_legend"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:fontFamily="@font/ubuntu_mono"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btn_Barcode_Return"
            android:layout_width="47dp"
            android:layout_height="43dp"
            android:background="@drawable/ic_barcode_reader"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_Return"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/txt_end_transfer"
            android:textColor="@color/whiteDefault"
            android:textStyle="bold"
            android:visibility="invisible"
            app:fontFamily="@font/ubuntu_mono" />

    </RelativeLayout>

</LinearLayout>