<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.LaptopStickerActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/tm_Layout"
        android:layout_marginTop="@dimen/mg_Title"
        android:layout_marginBottom="@dimen/mg_Title"/>

    <TextView
        android:id="@+id/lbl_sticker_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mg_Space"
        android:text="@string/txt_sticker_num"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/ubuntu_mono"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_sticker_code"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mg_Space"
            android:ems="10"
            android:hint="@string/txt_sticker_num_legend"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:fontFamily="@font/ubuntu_mono"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btn_Search_sticker"
            android:layout_width="47dp"
            android:layout_height="43dp"
            android:background="@drawable/ic_search"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_emp_picture"
            android:layout_gravity="center"
            android:layout_width="@dimen/emp_pict_wd"
            android:layout_height="@dimen/emp_pict_hg"
            android:background="@drawable/ic_person_pic"/>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/lbl_emp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_mono"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/txt_employee_name"/>

    </LinearLayout>

</LinearLayout>